--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "build": "cd client && npm run build",
-    "install-client": "cd client && npm install"
+    "server": "nodemon index.js",
+    "install-client": "cd client && npm install",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "concurrently": "^6.2.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.12.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
-  },
-  "engines": {
-    "node": "14.17.1"
   }
 }
